Update .gitignore to include additional Firebase credential file for improved security and to prevent accidental commits of sensitive information.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Firebase
 diabetes-mellitus-linebot-firebase-adminsdk-ql11b-2243e5dfb7.json
+yjj-s-6dda0-firebase-adminsdk-r2z9x-525ba876b9.json
 
 # Python
 __pycache__/
